dartagnan/src/test/resources/spirv-clang/sourcelocation_tests/races/fail/write_write/loop.spv.dis
; @Input: %11 = 6
; @Config: 6, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 31
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %9 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %10 FuncParamAttr NoCapture
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
       %uint = OpTypeInt 32 0
     %uint_5 = OpConstant %uint 5
     %uint_0 = OpConstant %uint 0
     %uint_4 = OpConstant %uint 4
     %uint_1 = OpConstant %uint 1
    %uint_99 = OpConstant %uint 99
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %8 = OpTypeFunction %void %_ptr_Workgroup_uint
       %bool = OpTypeBool
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
          %9 = OpFunction %void None %8
         %10 = OpFunctionParameter %_ptr_Workgroup_uint
         %11 = OpLabel
         %18 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %10 %uint_5
               OpBranch %13
         %12 = OpLabel
               OpReturn
         %13 = OpLabel
         %21 = OpPhi %uint %uint_0 %11 %20 %16
         %22 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %23 = OpCompositeExtract %uint %22 0
               OpSwitch %23 %16 5 %15 4 %14
         %14 = OpLabel
               OpBranch %15
         %15 = OpLabel
         %25 = OpPhi %uint %uint_4 %14 %23 %13
               OpStore %18 %25 Aligned 4
               OpBranch %16
         %16 = OpLabel
         %20 = OpIAdd %uint %21 %uint_1
         %30 = OpULessThan %bool %21 %uint_99
               OpBranchConditional %30 %13 %12
               OpFunctionEnd
